2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/47_unrayminus_string.deca
// Description :
//      unray Minus avec string 
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération UnrayMinus - devant string n'est pas valide
//
// Historique :
// cree le 10/01/2024

{
    - "bonjour";
}